<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ThemeBg"
    tools:context=".ui.fragments.home.pages.MovieDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/toolbar_color"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movieImg"
                android:layout_width="642px"
                android:layout_height="813px"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                app:layout_collapseMode="parallax"
                android:background="@android:color/transparent"
                android:contentDescription="@string/first_title"
                android:src="@drawable/ic_launcher_background" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:elevation="5dp"
                app:layout_scrollFlags="scroll|enterAlways">
                <ImageView
                    android:id="@+id/backImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_back" />

                <ImageView
                    android:id="@+id/favImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:padding="10dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_heart_blank" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:letterSpacing="0.03"
                    style="@style/ThemeTitleTextColor"
                    android:text="Barbie"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="@string/star"
                        android:src="@drawable/ic_star"
                        app:tint="@color/icon_color" />

                    <TextView
                        android:id="@+id/txtVoteAverage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/ThemeSubTitleTextColor"
                        android:text="8/10" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/ThemeSubTitleTextColor"
                android:text="Action, Adventure, Romance" />

            <TextView
                android:id="@+id/releaseDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/ThemeSubTitleTextColor"
                android:text="01.08.2023" />

            <TextView
                android:id="@+id/overviewTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:letterSpacing="0.045"
                android:nestedScrollingEnabled="false"
                style="@style/ThemeSubTitleTextColor"
                android:text="Jack Reacher must uncover the truth behind a major government conspiracy in order to clear his name. On the run as a fugitive from the law, Reacher uncovers a potential secret from his past that could change his life forever"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/videoRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:paddingHorizontal="2dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/trailer_item" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>